Rimosso codice perchè da rifare nella demo, sulla base degli appunti

--- a/code/test_project/views/template.ejs
+++ b/code/test_project/views/template.ejs
@@ -3,13 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Page Title</title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha512-MoRNloxbStBcD8z3M/2BmnT+rg4IsMxPkXaGh2zD6LGNNFE80W3onsAhRcMAMrSoyWL9xD7Ert0men7vR8LUZg==" crossorigin="anonymous" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css" />
     </head>
 
     <body>
 
-        <h1>This is a Heading</h1>
-        <p>This is a paragraph.</p>
+        <h1>Hello World!</h1>
 
     </body>
 </html>
