--- a/code/test_project/views/liste/creditcards.ejs
+++ b/code/test_project/views/liste/creditcards.ejs
@@ -1,10 +1,10 @@
 <div class="container">
     <div class="row">
-        <% data.forEach(function(singleAddress){ %>
+        <% data.forEach(function(singleCreditCard){ %>
             <div class="col-4">
                 <div class="card" style="width: 18rem;">
                     <div class="card-body">
-                      <h5 class="card-title"><%= singleAddress.street %></h5>
+                      <h5 class="card-title"><%= singleCreditCard.number %></h5>
                     </div>
                   </div>
             </div>
